LDEV-4054 updating labels
Updating labels in bulk mainly English, Greek and Norwegian

--- a/lams_admin/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:27:16 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:53:54 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -484,7 +484,7 @@ label.password.max.length  =m\u00e5 v\u00e6re mindre enn 25 karakterer
 label.password.min.length  =m\u00e5 minimum inneholde {0} karakterer
 label.password.old.must.entered  =Det gamle passordetm\u00e5 skrives
 label.password.symbols.allowed  =Kun disse symbolene er tillatt
-label.password.restrictions  =Passordet m\u00e5 inneholde de rettningslinjer som er definert
+label.password.restrictions  =Passordet m\u00e5 inneholde de tegn som er spesifisert
 label.password.must.contain  =Passord m\u00e5 inneholde
 label.password.must.ucase  =minimum 1 stor bokstav
 label.password.must.number  =minimum ett tall
@@ -509,6 +509,79 @@ button.select.importfile  =Velg fil for import
 label.upload.info  =Opplastet film\u00e5 v\u00e6re en Excel filog ikke overstige:{0}
 errors.maxfilesize  =Opplastet fil er st\u00f8rre enn maks filst\u00f8rrelse:{0}
 error.attachment.not.xls  =Filen er ikke en Excel .xls fil
+sysadmin.maintain.session  =Innloggede brukere
+sysadmin.maintain.session.login  =Login
+sysadmin.maintain.session.id  =Sesjins ID
+error.portrait.removal.failed  =Kan ikke fjerne bildet. Se feilmeldings filen for detaljer
+label.delete.portrait  =Fjern bildet
+sysadmin.maintain.session.delete  =Slett
+config.display.portrait  =Vis bilde av studenten i oversikten
+config.allow.kumalive  =Koble til Kumalive
+admin.organisation.create.date  =Data for opprettelse
+admin.org.password.change.title  =Still tilbake passordet for kursdeltagerne
+admin.org.password.change.button  =Passordet er stilt tilbake
+admin.org.password.change.is.staff  =Forfatter/inspekt\u00f8r
+admin.org.password.change.is.learner  =Studenter
+admin.org.password.change.generate  =Generer nyttpassord
+admin.org.password.change.email  =send nytt passord med e-post
+admin.org.password.change.force  =Krev at passordet endres etter login
+admin.org.password.change.custom  =Skriv inn elller generer ditt eget passord
+admin.org.password.change.grid.login  =Login
+admin.org.password.change.grid.name  =Navn
+admin.org.password.change.grid.email  =e-post
+admin.org.password.change.grid.error.load  =Feil ved lasting av brukere inn i grid
+admin.org.password.change.choose  =Endre passord for
+admin.org.password.change.submit  =Endre passord
+admin.org.password.change.error.prefix.staff  =Passord for forfatter/inspekt\u00f8r
+admin.org.password.change.error.prefix.learners  =Passord for forfatter/inspekt\u00f8r
+admin.org.password.change.success  =Passordet er endret
+admin.org.password.change.email.subject  =LAMS passord er endret
+admin.org.password.change.email.body  =Passordet ditt er endret til: {0}\n\n--en e-post sendes automatisk  fra LAMS
+label.event.log  =Hendelses logg
+label.event.topic  =Emne
+label.event.type  =Hendelsestype
+label.select.topic  =Velg emne....
+label.select.type  =Velg type....
+label.date  =Dqto
+label.between.dates  =Mellom datoer
+label.lesson.with.name  =Leksjon: {0} ({1})
+label.activity.with.name  =Aktivitet: {0} ({1})
+label.type.teacher.learning.design.create  =L\u00e6ringsdesign er opprettet
+label.type.teacher.lesson.create  =Leksjon er opprettet
+label.type.teacher.lesson.start  =Leksjon er startet
+label.type.teacher.lesson.change.state  =Leksjonens status er endret
+label.type.learner.activity.start  =Aktivitet er startet
+label.type.learner.activity.finish  =Aktiviteten er ferdig
+label.type.learner.lesson.complete  =Leksjonen er ferdig
+label.type.learner.lesson.mark.submit  =Karakterer er innsendt
+label.type.activity.edit  =Aktiviteten er editert
+label.type.force.complete  =Student "force" fullf\u00f8rt
+label.type.user.org.admin  =Organisasjon eller bruker erv endret
+label.type.login.as  =Sysadmin er logget inn som
+label.type.password.change  =Passord er endret
+label.type.role.failure  =En aksjon er fors\u00f8kt utf\u00f8rt med feil rolle
+label.type.account.locked  =Konto er l\u00e5st
+label.type.notification  =Melding
+label.type.mark.updated  =Karakterer er latet opp
+label.type.mark.released  =Karakterer er frigitt
+label.type.learner.content.updated  =Studentenes inngang er modifisert
+label.type.learner.content.show.hide  =Studentenes inngang er vist/skjult
+label.type.unknown  =Ukjent
+label.area.lesson  =Leksjon
+label.area.security  =Sikkerhet
+label.area.notification  =Melding
+label.area.marks  =Karakterer
+label.area.learner.content  =Studentens inngang
+label.area.unknown  =Ukjent
+audit.change.made.by  =Endringene er utf\u00f8rt av
+audit.change.made.to  =Endringer er utf\u00f8rt p\u00e5
+admin.delete.lessons  =Slett alle leksjoner
+msg.delete.all.lesson.confirm.1  =Du er i ferd med \u00e5 slette ALLE leksjoner permanent fra kurset "{0}". Er du helt sikker p\u00e5 at du vil gj\u00f8re dette? Det ikke mulig \u00e5 angre.
+msg.delete.all.lesson.confirm.2  =ALLE leksjoner vil bli slettet, inkludert aktive leksjoner  med elever. Ingen leksjoner vil bli igjen i kurset. Er du sikker p\u00e5 at du vil fortsette?
+msg.delete.all.lesson.error  =Feil under sletting av kurs leksjoner
+label.delete.all.lesson.count  =Antall gjenv\u00e6rende/ totalt antall leksjoner:
+label.delete.all.lesson.progress  =Sletter....
+sysadmin.lesson.delete.title  =Slett alle leksjonene fra kurset
 
 
-#======= End labels: Exported 503 labels for no NO =====
+#======= End labels: Exported 576 labels for no NO =====
