--- a/lams_common/conf/language/lams/ApplicationResources.properties
+++ b/lams_common/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 17 15:42:03 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:45:28 CST 2018 
  
 #=================== labels for LAMS Common =================# 
 
@@ -70,7 +70,8 @@ audit.change.mark  =User {3} ({4})  Changed mark for user {0}. Old mark: {1}, ne
 audit.started.editing.activity  =Teacher {0} has started editing activity {1} in monitor
 audit.finished.editing.activity  =Teacher {0} has finished editing activity {1} in monitor
 audit.cancelled.editing.activity  =Teacher {0} has cancelled editing activity {1} in monitor
-audit.tool.prefix=Tool {0}:
-audit.change.initiated.by=Change Initiated By
+audit.tool.prefix  =Tool {0}:
+audit.change.initiated.by  =Change initiated by
 
-#======= End labels: Exported 64 labels for en AU =====
+
+#======= End labels: Exported 66 labels for en AU =====
