--- a/lams_common/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Apr 04 10:22:11 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:46:31 CST 2018 
  
 #=================== labels for LAMS Common =================# 
 
@@ -70,6 +70,8 @@ audit.change.mark  =Nota cambiado para el usuario {0}. Nota original: {1}, nota 
 audit.started.editing.activity  =el usuario {0} ha comenzado a editar la actividad {1} en monitoreo
 audit.finished.editing.activity  =el usuario {0} ha finalizado de editar la actividad {1} en monitoreo
 audit.cancelled.editing.activity  =el usuario {0} ha cancelado la edici\u00f3n de la actividad {1} en monitoreo
+audit.tool.prefix  =Herramienta {0}:
+audit.change.initiated.by  =Cambio iniciado por
 
 
-#======= End labels: Exported 64 labels for es ES =====
+#======= End labels: Exported 66 labels for es ES =====
