--- a/lams_learning/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:19:53 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:41:56 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -94,8 +94,6 @@ label.learner.progress.support  =St\u00f8tteaktiviteter
 label.submit.button  =Send inn
 label.learner.progress.review.activity  =Se p\u00e5 aktiviteten
 label.schedule.gate.reach  =Du er kommet til en port
-label.schedule.gate.offset.1  =Porten vil bli \u00e5pnet
-label.schedule.gate.offset.2  =etter
 label.days  =dager
 label.hours  =timer
 label.minutes  =minutter
@@ -108,6 +106,55 @@ mynotes.add.new.current.lesson.button  =Legg til notat til denne leksjonen
 label.group.confirm.header  =Bekreft valg av gruppe
 label.group.confirm.button  =Bekreft
 label.group.confirm.areyoujoining  =Deltar du?
+message.lesson.finished.report.load.error  =Feil ved opplasting av rapporten
+message.lesson.finished.ok  =OK
+gradebook.columntitle.mark  =Poeng
+gradebook.columntitle.activity  =Aktivitet
+gradebook.columntitle.averageMark  =Gjennomsnittlig poeng
+gradebook.columntitle.progress  =Fremdrift
+gradebook.lesson.complete  =Poeng for denne leksjonen
+gradebook.learner.lesson.mark  =Dine poeng
+label.kumalive.rubric.name  =Skriv rubrikk navnet
+label.kumalive.rubric.up  =Flytt rubrikken opp
+label.kumalive.rubric.down  =Flytt rubrikken ned
+label.kumalive.rubric.delete  =Fjern rubrikken
+label.kumalive.rubric.choose  =Rubrikker som kn benyttes
+label.kumalive.title  =Kumalive:
+label.kumalive.wait.start  =Vent til at foreleseren har startet Kumalive
+label.kumalive.name.enter  =Skriv et navn for en ny Kumalive
+button.kumalive.create  =Opprett
+button.kumalive.finish.kumalive  =Avslutt Kumalive
+button.kumalive.ask  =Stillet sp\u00f8rsm\u00e5l
+button.kumalive.finish.question  =Avslutt sp\u00f8rsm\u00e5l
+button.kumalive.raise  =Rekk opp h\u00e5nden
+button.kumalive.putdown  =Ta ned h\u00e5nden
+label.kumalive.raised.hands  =Rekk opp hendene
+label.kumalive.learners  =Studenter
+label.kumalive.teacher  =L\u00e6rer
+label.kumalive.finish.speak  =Avslutt presentasjon
+label.kumalive.mark.great  =Kjempefint !
+label.kumalive.mark.ok  =Bra
+label.kumalive.mark.bad  =Ikke s\u00e5 bra
+message.kumalive.finish.kumalive  =Kumalive er avsluttet. Vinduet vil bli lukket.
+message.kumalive.finish.kumalive.confirm  =Er du sikker p\u00e5 at du vil avslutte denne Kumalive ?
+message.kumalive.speak.not.raised.hand  =\u00d8nsker du \u00e5 la studenten som ikke rakte opp h\u00e5nden, f\u00e5 snakke ?
+label.kumalive.closed  =Vi har ingen forbindelse med Kumalive. Fors\u00f8k \u00e5 lukke vinduet og deretter \u00e5pne det.
+label.kumalive.report.full.name  =Navn
+label.kumalive.report.sheet.header  =Kumalive rapport for {0}
+label.kumalive.report.sheet.header.learners  =Studentenes oppsummering
+label.kumalive.report.name  =Kumalive navn
+label.kumalive.report.mark.none  =Ingen karakter
+label.kumalive.report.mark  =Karakterer
+label.kumalive.report.first.name  =Fornavn
+label.kumalive.report.last.name  =Etternavn
+label.kumalive.report.login  =Login
+label.kumalive.report.attempt  =Fors\u00f8k
+label.kumalive.report.average  =Gjennomsnitt
+label.kumalive.report.time  =Tid
+message.kumalive.report.load.error  =Feil ved opplasting av rapporten
+button.kumalive.ok  =OK
+button.kumalive.report.export.all  =Eksporter alt
+button.kumalive.report.export.selected  =Eksport er valgt
 
 
-#======= End labels: Exported 102 labels for no NO =====
+#======= End labels: Exported 149 labels for no NO =====
