--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:28:52 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:32:54 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -137,7 +137,6 @@ email.notifications.course.notifications  =Course notifications: {0}
 email.notifications.user.name  =User name [login]
 email.notifications.lesson.name  =Lesson name
 email.notifications.send  =Send
-email.notifications.message.header =Message:
 email.notifications.user.search.property.0  =Are assigned to this lesson
 email.notifications.user.search.property.1  =Haven't finished this lesson
 email.notifications.user.search.property.2  =Have finished this lesson
@@ -159,14 +158,11 @@ email.notifications.emails.successfully.sent  =Emails have been successfully sen
 advanced.tab.enable.lesson.notifications  =Enable lesson notifications
 email.notifications.by.this.date  =By this date:
 email.notifications.emails.successfully.scheduled  =Emails have been successfully scheduled to be sent on specified date.
-email.notifications.scheduled.messages.button =Scheduled
-email.notifications.scheduled.messages.list  =List of sheduled emails
+email.notifications.scheduled.messages.list  =List of scheduled emails
 email.notifications.scheduled.messages.list.scheduled.date  =Scheduled date
 email.notifications.scheduled.messages.list.email.body  =Email body
 email.notifications.scheduled.messages.list.notify.sudents.that  =Notify learners that
 email.notifications.scheduled.messages.list.back  =Back to notifications
-email.notifications.archived.messages.button =Archived
-email.notifications.archived.messages.list  =List of archived emails
 email.notifications.table.now  =Now
 email.notifications.table.schedule  =Schedule
 email.notifications.button.schedule  =Schedule
@@ -411,7 +407,19 @@ audit.lesson.removed.permanently  =Lesson "{0}" ({1}) removed permanently.
 audit.lesson.status.changed  =Lesson "{0}" ({1}) status changed from "{2}" to "{3}"
 tour.gradebook.show.weight  =Show Weights
 tour.gradebook.show.weight.content  =Show/hide the activity weights used for marking this lesson.
-
+label.no.learners  =No learners in group.
+label.lesson.finishes  =Lesson finishes {0}
+label.lesson.starts  =Lesson starts {0}
+button.schedule.disable.tooltip  =Schedule lesson to be disabled at a future time
+button.disable.now  =Disable now
+button.disable.now.tooltip  =Disable the lesson immediately
+label.reschedule  =Reschedule
+label.display.activity.scores  =Display activity scores on completion
+lesson.display.activity.scores.alert  =Now learners can see their activity scores on lesson completion.
+lesson.hide.activity.scores.alert  =Now learners can not see their activity scores on lesson completion.
+tour.display.activity.scores.content  =Click on <b>Display activity scores on completion</b> to allow learners to see their activity scores when they finish a lesson. Click again to disable.
+tour.lesson.description  =Lesson description shown to the learner when the lesson is launched. It may be changed with the Lesson Introduction button below.
+tour.edit.lesson.introduction  =Change the lesson description (shown above). This description is shown to the learner when the lesson is launched.
 label.tbl.monitor  =TBL Monitor
 label.teams  =Teams
 label.students.teams  =Students & Teams
@@ -421,7 +429,6 @@ label.ira  =iRA
 label.tra  =tRA
 label.burning.questions  =Burning Qs
 label.forum  =Forum
-label.peer.review  =Peer Review
 label.aes  =AEs
 label.sequence  =Sequence
 label.sequence.diagram  =Sequence diagram
@@ -435,9 +442,20 @@ label.score  =Score
 label.ira.responses.for  =iRA responses for
 label.tra.responses.for  =tRA responses for
 label.note.leader.change  =Note that the leader change only will take place for the activities in which the existing leader has not been set or commenced.
-label.current.leader  =Current leader: 
+label.current.leader  =Current leader:
 label.leader.successfully.changed  =Leader has been successfully changed
 label.view.forum  =View forum
 label.switch.to.regular.monitor  =Switch to regular monitor
+label.peer.review  =Peer Review
+email.notifications.archived.export.button  =Export
+email.notifications.archived.export.sheet.name  =Notification
+email.notifications.message.header  =Message:
+email.notifications.scheduled.messages.button  =Scheduled
+email.notifications.archived.messages.button  =Archived
+email.notifications.archived.messages.list  =List of archived emails
+email.notifications.archived.messages.list.sent.date  =Sent on
+email.notifications.archived.messages.list.sent.count  =Sent to
+email.notifications.archived.messages.list.learners  =learners
 
-#======= End labels: Exported 401 labels for en AU =====
+
+#======= End labels: Exported 450 labels for en AU =====
