--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Oct 16 03:14:44 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:01:31 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -316,7 +316,20 @@ label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
 message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a learner has already answered, then the mark attained for the modified question will be deleted as it is assumed that the question has changed. If the option for retries is available, then the learner can submit an answer for this question again.
+label.enable.confidence.levels  =Enable confidence level
+label.what.is.your.confidence.level  =How confident are you of your answer?
+label.confidence  =Confidence
+label.no.question.references  =No questions have been added to the question list. Do you still want to proceed with no questions?
 label.hide.name.column  =Hide name column
+label.ae.questions.marks  =AE Questions & Marks
+label.ira.questions.marks  =iRA Questions & Marks
+label.attendance  =Attendance
+label.show.students.choices  =Show students' choices
+label.hide.students.choices  =Hide students' choices
+label.print  =Print
+label.excel.export  =Excel export
+label.teams  =Teams
+label.no.questions.in.question.bank  =No questions have been added to the question list. Do you still want to proceed with no questions?
 
 
-#======= End labels: Exported 310 labels for en AU =====
+#======= End labels: Exported 324 labels for en AU =====
