--- a/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:40 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:11:59 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -29,7 +29,7 @@ lable.topic.title.startedby  =\u0391\u03c1\u03c7\u03af\u03b6\u03b5\u03b9 \u03b1\
 lable.topic.title.replies  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
 lable.topic.title.mark  =\u0392\u03b1\u03b8\u03bc\u03cc\u03c2
 lable.topic.subject.by  =\u0391\u03c0\u03cc
-label.back.to.forum  =\u03a0\u03af\u03c3\u03c9 \u03c3\u03c4\u03b7  \u0391\u03c1\u03c7\u03ae \u03c4\u03b7\u03c2 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2
+label.back.to.forum  =\u03a0\u03af\u03c3\u03c9 \u03c3\u03c4\u03b7\u03bd \u0391\u03c1\u03c7\u03ae \u03c4\u03b7\u03c2 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2
 lable.topic.title.message.number  =# \u03b1\u03c0\u03cc \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03b1
 lable.topic.title.average.mark  =\u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd
 page.title.monitoring.content.userlist  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7
