--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:41:16 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:55:58 CST 2018 
  
 #=================== labels for Google Maps =================# 
 
@@ -44,7 +44,6 @@ advanced.allowTerrain  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u
 advanced.allowSatellite  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03bf \u03c4\u03cd\u03c0\u03bf\u03c2 \u03b4\u03bf\u03c1\u03c5\u03c6\u03bf\u03c1\u03b9\u03ba\u03bf\u03cd \u03c7\u03ac\u03c1\u03c4\u03b7
 advanced.allowHybrid  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03bf \u03c4\u03cd\u03c0\u03bf\u03c2 \u03c5\u03b2\u03c1\u03b9\u03b4\u03b9\u03ba\u03bf\u03cd \u03c7\u03ac\u03c1\u03c4\u03b7
 monitor.summary.title.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-monitor.summary.title.groups  =\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
 monitor.summary.title.map  =\u03a7\u03ac\u03c1\u03c4\u03b7\u03c2
 monitor.summary.th.advancedSettings  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
 label.authoring.authoredMarkers  =\u03a3\u03b7\u03bc\u03ac\u03bd\u03c3\u03b5\u03b9\u03c2
@@ -106,6 +105,9 @@ label.nogroups  =\u0394\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b1\u
 button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.show.on.map  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03c3\u03c4\u03bf \u03c7\u03ac\u03c1\u03c4\u03b7
+label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
+monitoring.user.fullname  =\u038c\u03bd\u03bf\u03bc\u03b1
+monitoring.user.reflection  =\u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03c3\u03c4\u03bf \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf
 
 
-#======= End labels: Exported 100 labels for el GR =====
+#======= End labels: Exported 102 labels for el GR =====
