--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:41:17 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:55:24 CST 2018 
  
 #=================== labels for Google Maps =================# 
 
@@ -44,7 +44,6 @@ advanced.allowTerrain  =Allow terrain map type
 advanced.allowSatellite  =Allow satellite map type
 advanced.allowHybrid  =Allow hybrid map type
 monitor.summary.title.advanced  =Advanced
-monitor.summary.title.groups  =Groups
 monitor.summary.title.map  =Map
 monitor.summary.th.advancedSettings  =Advanced settings
 label.authoring.authoredMarkers  =Markers
@@ -106,6 +105,9 @@ label.nogroups  =No groups found for activity.
 button.submit  =Finish
 label.activity.completion  =End of activity
 label.show.on.map  =Show on map
+label.search  =Search...
+monitoring.user.fullname  =Name
+monitoring.user.reflection  =Notebook entry
 
 
-#======= End labels: Exported 100 labels for en AU =====
+#======= End labels: Exported 102 labels for en AU =====
