--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Oct 16 03:16:32 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:12:43 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -214,11 +214,9 @@ label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
 message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a learner has already answered, then the mark attained for the modified question will be deleted as it is assumed that the question has changed. If the option for retries is available, then the learner can submit an answer for this question again.
-
-label.enable.confidence.levels  =Enable confidence levels
-label.what.is.your.confidence.level  =How confident you are answering this question?
-label.confidence  =Confidence
-
+label.enable.confidence.levels  =Enable confidence level
+label.confidence  =How confident are you of your answer?
+label.what.is.your.confidence.level  =Confidence
 label.ira.questions.marks  =iRA Questions & Marks
 label.attendance  =Attendance
 label.show.students.choices  =Show students' choices
@@ -226,4 +224,5 @@ label.hide.students.choices  =Hide students' choices
 label.print  =Print
 label.excel.export  =Excel export
 
-#======= End labels: Exported 208 labels for en AU =====
+
+#======= End labels: Exported 217 labels for en AU =====
