--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:18:14 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:02 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -255,6 +255,8 @@ label.notifications  =Merknader
 label.words.required  =Ord m\u00e5 legges til
 label.other.options  =Flere innstillinger
 label.allow.review.other.responses  =Tillat \u00e5 se andre svar ?
+label.username  =Brukernavn
+label.fullname  =Fullt nav
 
 
-#======= End labels: Exported 249 labels for no NO =====
+#======= End labels: Exported 251 labels for no NO =====
