--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:29:55 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:33:02 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -75,7 +75,6 @@ learner.form.filepath.displayname  =Nombre del Archivo a Enviar
 errors.mark.invalid.number  =Le evaluaci\u00f3n no es un n\u00famero valido
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 define.later.message  =El contenido para esta actividad no ha sido definido todavia. Por favor espere a que su profesor defina el contenido.
-message.monitoring.edit.activity.not.editable  =El contenido de esta actividad no se puede editar nuevamente.
 button.try.again  =Refrescar
 button.finish  =Finalizar
 label.submit.file.suffix  =Subido los siguientes archivos
@@ -157,6 +156,13 @@ label.search  =Buscar..
 errors.required  ={0} es obligatorio
 errors.maxfilesize  =El archivo subido excede el m\u00e1ximo permitido: {0}
 label.add  =Agregar
+label.waiting.for.leader  =Por favor, espere mientras alguien se designa un l\u00edder de grupo
+label.users.from.group  =Otros miembros del grupo:
+label.refresh  =Actualizar
+label.waiting.for.leader.finish  =Espere hasta que el l\u00edder del grupo termine la actividad.
+label.select.leader  =Selecci\u00f3n del l\u00edder
+label.waiting.for.leader.launch.time.limit  =L\u00edder no ha comenzado la actividad. Por favor, espere hasta que el l\u00edder comience.
+label.use.select.leader.tool.output  =Utilizar l\u00edderes
 
 
-#======= End labels: Exported 151 labels for es ES =====
+#======= End labels: Exported 157 labels for es ES =====
