--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:18:40 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:27 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -75,7 +75,6 @@ learner.form.filepath.displayname  =Last opp fil navn
 errors.mark.invalid.number  =Karakter er p\u00e5 et ugyldig tallformat.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 define.later.message  =Vent til at foreleseren har gjort ferdig innholdet for denne aktiviteten.
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengere redigeres.
 button.try.again  =Fors\u00f8k igjen
 button.finish  =Neste aktivitet
 label.submit.file.suffix  =Send inn f\u00f8lgende filer
@@ -157,6 +156,10 @@ label.search  =S\u00f8k....
 errors.required  ={0} er p\u00e5krevet.
 errors.maxfilesize  =Opplastet fil overstiger maksimum filst\u00f8rrelse:{0}
 label.add  =Legg til
+label.waiting.for.leader  =Vennligst vent til det er avgjort hvem som er gruppeleder.
+label.users.from.group  =Andre studenter som er deltagere i denne gruppen er:
+label.refresh  =Frisk opp igjen skjermbildet
+label.waiting.for.leader.finish  =Vennligst vent til en gruppe leder har avsluttet aktiviteten.
 
 
-#======= End labels: Exported 151 labels for no NO =====
+#======= End labels: Exported 154 labels for no NO =====
