--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:46:14 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:05:12 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -31,7 +31,6 @@ monitoring.tab.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03
 monitoring.tab.edit.activity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 monitoring.label.group  =\u039f\u03bc\u03ac\u03b4\u03b1
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
-message.monitoring.edit.activity.not.editable  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03bb\u03ad\u03bf\u03bd \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03c3\u03b9\u03bc\u03b7
 export.title  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u03b5\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03c4\u03bf \u0395\u03c1\u03c9\u03c4\u03b7\u03bc\u03b1\u03c4\u03bf\u03bb\u03cc\u03b3\u03b9\u03bf
 label.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 label.finished  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
@@ -185,7 +184,6 @@ label.authoring.export.qti  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae IMS QTI
 label.scratchie.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7\u03c2
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.authoring.advanced.burning.questions  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03c3\u03b7\u03bc\u03b1\u03bd\u03c4\u03b9\u03ba\u03ce\u03bd \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
-label.continue.burning.questions  =\u03a3\u03c5\u03bd\u03b5\u03c7\u03af\u03c3\u03c4\u03b5 \u03bc\u03b5 \u03c3\u03b7\u03bc\u03b1\u03bd\u03c4\u03b9\u03ba\u03ad\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
 label.burning.questions  =\u03a3\u03b7\u03bc\u03b1\u03bd\u03c4\u03b9\u03ba\u03ad\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
 label.burning.question  =\u03a3\u03b7\u03bc\u03b1\u03bd\u03c4\u03b9\u03ae \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7
 label.time.limit  =\u03a0\u03c1\u03bf\u03b8\u03b5\u03c3\u03bc\u03af\u03b1 (\u03c3\u03b5 \u03bb\u03b5\u03c0\u03c4\u03ac)
@@ -199,7 +197,6 @@ label.unlike  =\u0394\u03b5\u03bd \u03bc\u03bf\u03c5 \u03b1\u03c1\u03ad\u03c3\u0
 label.general.burning.question  =\u0393\u03b5\u03bd\u03b9\u03ba\u03ae \u03c3\u03b7\u03bc\u03b1\u03bd\u03c4\u03b9\u03ba\u03ae \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7
 label.waiting.for.leader.launch.time.limit  =\u039f \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03b9 \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bc\u03ad\u03c7\u03c1\u03b9 \u03bd\u03b1 \u03c4\u03b7\u03bd \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03b9.
 label.waiting.for.leader.submit.notebook  =\u0397 \u03a0\u03c1\u03bf\u03b8\u03b5\u03c3\u03bc\u03af\u03b1\u03c2 \u03c0\u03bf\u03c5 \u03ba\u03b1\u03b8\u03bf\u03c1\u03af\u03c3\u03c4\u03b7\u03ba\u03b5  \u03b1\u03c0\u03cc \u03c4\u03bf\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03ae \u03ad\u03c7\u03b5\u03b9 \u03bb\u03ae\u03be\u03b5\u03b9. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bc\u03ad\u03c7\u03c1\u03b9 \u03bf \u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b1\u03c2 \u03bd\u03b1 \u03c5\u03c0\u03bf\u03b2\u03ac\u03bb\u03bb\u03b5\u03b9 \u03c4\u03bf \u03c3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf.
-label.waiting.for.leader.submit.burning.questions  =\u0397 \u03c0\u03c1\u03bf\u03b8\u03b5\u03c3\u03bc\u03af\u03b1\u03c2 \u03c0\u03bf\u03c5 \u03b5\u03af\u03c7\u03b5 \u03ba\u03b1\u03b8\u03bf\u03c1\u03b9\u03c3\u03c4\u03b5\u03af \u03b1\u03c0\u03cc \u03c4\u03bf\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03ae \u03ad\u03c7\u03b5\u03b9 \u03bb\u03ae\u03be\u03b5\u03b9. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bc\u03ad\u03c7\u03c1\u03b9 \u03bf \u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b1\u03c2 \u03bd\u03b1 \u03c5\u03c0\u03bf\u03b2\u03ac\u03bb\u03bb\u03b5\u03b9 \u03c4\u03b1 \u03c3\u03b7\u03bc\u03b1\u03bd\u03c4\u03b9\u03ba\u03ac \u03b5\u03c1\u03c9\u03c4\u03ae\u03bc\u03b1\u03c4\u03b1.
 label.authoring.advanced.shuffle.items  =\u0391\u03bd\u03ac\u03bc\u03b9\u03be\u03b7 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
 label.summary.downloaded  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf Excel \u03ad\u03c7\u03b5\u03b9 \u03bb\u03b7\u03c6\u03b8\u03b5\u03af.
 label.number.groups.finished  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bf\u03bc\u03ac\u03b4\u03c9\u03bd \u03c0\u03bf\u03c5 \u03ad\u03c7\u03bf\u03c5\u03bd \u03c4\u03b5\u03bb\u03b5\u03b9\u03ce\u03c3\u03b5\u03b9
@@ -209,6 +206,22 @@ label.highest.mark  =\u03a5\u03c8\u03b7\u03bb\u03cc\u03c4\u03b5\u03c1\u03b7 \u03
 label.marks  =\u0392\u03b1\u03b8\u03bc\u03bf\u03af
 label.number.groups.in.mark.range  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bf\u03bc\u03ac\u03b4\u03c9\u03bd \u03c3\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b5\u03cd\u03c1\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd
 label.average.mark  =\u039c\u03ad\u03c3\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1
+message.monitoring.edit.activity.warning  =\u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7: \u03b5\u03ac\u03bd \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03c4\u03b5\u03af\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c4\u03b5 \u03bc\u03b9\u03b1 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 \u03ae \u03b1\u03bb\u03bb\u03ac\u03be\u03b5\u03c4\u03b5 \u03bc\u03b9\u03b1 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u03c0\u03bf\u03c5 \u03bf \u03b7\u03b3\u03ad\u03c4\u03b7\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9, \u03c4\u03cc\u03c4\u03b5 \u03bf \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03b3\u03b9\u03b1 \u03bf\u03bb\u03cc\u03ba\u03bb\u03b7\u03c1\u03b7 \u03c4\u03b7\u03bd \u03bf\u03bc\u03ac\u03b4\u03b1 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03b9\u03b7\u03bc\u03ad\u03bd\u03b7 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 \u03b8\u03b1 \u03b4\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03b5\u03af, \u03ba\u03b1\u03b8\u03ce\u03c2 \u03b8\u03b5\u03c9\u03c1\u03b5\u03af\u03c4\u03b1\u03b9 \u03cc\u03c4\u03b9 \u03b7 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 \u03ad\u03c7\u03b5\u03b9 \u03b1\u03bb\u03bb\u03ac\u03be\u03b5\u03b9.
+label.show.confidence.level  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b5\u03c0\u03b9\u03c0\u03ad\u03b4\u03c9\u03bd \u03b5\u03bc\u03c0\u03b9\u03c3\u03c4\u03bf\u03c3\u03cd\u03bd\u03b7\u03c2 \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03b1\u03ba\u03cc\u03bb\u03bf\u03c5\u03b8\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
+label.no.confidence.levels.activities  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03bf\u03c5\u03bd \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2 \u03bc\u03b5 \u03b5\u03c0\u03af\u03c0\u03b5\u03b4\u03bf \u03b5\u03bc\u03c0\u03b9\u03c3\u03c4\u03bf\u03c3\u03cd\u03bd\u03b7\u03c2 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03b5\u03c4\u03b5.
+label.save.learning.design  =\u0393\u03b9\u03b1 \u03bd\u03b1 \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03b5\u03c4\u03b5 \u03bc\u03af\u03b1 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03bc\u03b5 \u03b5\u03c0\u03af\u03c0\u03b5\u03b4\u03bf \u03b5\u03bc\u03c0\u03b9\u03c3\u03c4\u03bf\u03c3\u03cd\u03bd\u03b7\u03c2, \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03c3\u03c4\u03b5 \u03c0\u03c1\u03ce\u03c4\u03b1 \u03c4\u03b7\u03bd \u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03af\u03b1 \u03c3\u03b1\u03c2.
+label.change.marking.allocation  =\u0391\u03bb\u03bb\u03b1\u03b3\u03ae \u03ba\u03b1\u03c4\u03b1\u03bd\u03bf\u03bc\u03ae\u03c2 \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd
+label.change.marking.allocation.warning  =\u03a0\u03c1\u03bf\u03c3\u03bf\u03c7\u03ae: \u03b7 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ae \u03c4\u03b7\u03c2 \u03ba\u03b1\u03c4\u03b1\u03bd\u03bf\u03bc\u03ae\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2 \u03b8\u03b1 \u03b5\u03c0\u03b7\u03c1\u03b5\u03ac\u03c3\u03b5\u03b9 \u03c4\u03bf\u03bd \u03c4\u03c1\u03cc\u03c0\u03bf \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03bc\u03bf\u03cd \u03c4\u03c9\u03bd \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd.
+label.modify.default.marking  =\u03a4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03af\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd
+label.burning.questions.autosaved  ="\u039a\u03b1\u03cd\u03c3\u03b7"\u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd \u03bc\u03b5 \u03b1\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03b7 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7-\u03ad\u03bb\u03b5\u03b3\u03c7\u03bf
+label.tra.questions.marks  =\u0395\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 & \u0392\u03b1\u03b8\u03bc\u03bf\u03af tRA
+label.attendance  =\u03a0\u03b1\u03c1\u03bf\u03c5\u03c3\u03af\u03b1
+label.show.students.choices  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03c4\u03c9\u03bd \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ce\u03bd \u03c4\u03c9\u03bd \u03b5\u03c0\u03b9\u03bc\u03bf\u03c1\u03c6\u03bf\u03cd\u03bc\u03b5\u03bd\u03c9\u03bd
+label.hide.students.choices  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03c4\u03c9\u03bd \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ce\u03bd \u03c4\u03c9\u03bd \u03b5\u03c0\u03b9\u03bc\u03bf\u03c1\u03c6\u03bf\u03cd\u03bc\u03b5\u03bd\u03c9\u03bd
+label.tra.results.by.team  =tRA \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1 \u03b1\u03bd\u03ac \u03bf\u03bc\u03ac\u03b4\u03b1
+label.average  =\u03bc\u03ad\u03c3\u03bf\u03c2 \u03cc\u03c1\u03bf\u03c2
+label.print  =\u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7
+label.teams.notuppercase  =\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
 
 
-#======= End labels: Exported 203 labels for el GR =====
+#======= End labels: Exported 216 labels for el GR =====
