--- a/lams_tool_survey/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:09:36 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:51:57 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -74,7 +74,6 @@ monitoring.label.user.name  =Name
 label.monitoring.edit.activity.cancel  =Cancel
 label.monitoring.edit.activity.update  =Update
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
 export.label.survey  =Survey
 error.title.empty  =Title can not be blank
 label.open  =Open
@@ -184,6 +183,7 @@ label.survey.options  =Options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.summary.downloaded=  =Report Downloaded
+label.timestamp  =Date/time
 
 
 #======= End labels: Exported 178 labels for en AU =====
