--- a/lams_tool_survey/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:26:30 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:52:30 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -183,6 +183,7 @@ label.survey.options  =Alternativer
 label.activity.completion  =Aktivitetsslutt
 label.notifications  =Meldinger
 label.summary.downloaded=  =Raporter som nedlastet
+label.timestamp  =Dato/klokkeslett
 
 
-#======= End labels: Exported 177 labels for no NO =====
+#======= End labels: Exported 178 labels for no NO =====
