--- a/lams_tool_vote/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:25:39 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:50:14 CST 2018 
  
 #=================== labels for Voting =================# 
 
@@ -160,6 +160,7 @@ label.voting.options  =Alternativer
 label.activity.completion  =Aktivitetsslutt
 js.error.validate.number  =Det er en feil med min og maks antall stemmer.Vennligst kontroller og fors\u00f8k igjen
 label.search  =S\u00f8k....
+message.monitoring.edit.activity.warning  =Vrasel:: Hvis du editerer og endrer en som allerede er valgt, s\u00e5 blir denne satt tilbake til null-fordi valget er endret
 
 
-#======= End labels: Exported 154 labels for no NO =====
+#======= End labels: Exported 155 labels for no NO =====
