--- a/lams_tool_daco/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:55:19 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:55:09 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -221,7 +221,7 @@ error.record.longlat.longitude.float  =\u03a4\u03bf \u03b3\u03b5\u03c9\u03b3\u03
 error.record.longlat.latitude.blank  =\u03a4\u03bf \u03b3\u03b5\u03c9\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03c0\u03bb\u03ac\u03c4\u03bf\u03c2 \u03c3\u03c4\u03b7\u03bd \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 {0} \u03b4\u03b5\u03bd \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc.
 error.record.longlat.latitude.float  =\u03a4\u03bf \u03b3\u03b5\u03c9\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03c0\u03bb\u03ac\u03c4\u03bf\u03c2 \u03c3\u03c4\u03b7\u03bd \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 {0} \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9  \u03ad\u03bd\u03b1\u03c2 \u03b4\u03b5\u03ba\u03b1\u03b4\u03b9\u03ba\u03cc\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
 error.record.notenough  =\u03a0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c4\u03bf\u03c5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03bd {0} \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c2.
-error.record.toomuch  =\u0394\u03b5\u03bd \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03b1\u03c0\u03cc {0} \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c2.
+error.record.toomuch  =\u0394\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03bd\u03b1 \u03b5\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03b1\u03c0\u03cc {0} \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ad\u03c2.
 error.upload.failed  =\u0397 \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae (\u03c6\u03cc\u03c1\u03c4\u03c9\u03c3\u03b7) \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 {0} \u03b1\u03c0\u03ad\u03c4\u03c5\u03c7\u03b5
 error.msg.upload.file.not.found  =\u0394\u03b5\u03bd \u03bd\u03b1 \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5 \u03c4\u03bf  \u03b1\u03c0\u03bf\u03c3\u03c4\u03b1\u03bb\u03b8\u03ad\u03bd \u03b1\u03c1\u03c7\u03b5\u03af\u03bf {0}
 error.msg.file.not.found  = \u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5 \u03b5\u03bc\u03c6\u03b1\u03bd\u03af\u03b6\u03b5\u03c4\u03b1\u03b9 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7 \u03c6\u03cc\u03c1\u03c4\u03c9\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5.
