--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:28:50 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:55:58 CST 2018 
  
 #=================== labels for Google Maps =================# 
 
@@ -44,7 +44,6 @@ advanced.allowTerrain  =Tillat terrengbaserte kart
 advanced.allowSatellite  =Tillat satelitt baserte kart
 advanced.allowHybrid  =Tillat hybrid type kart
 monitor.summary.title.advanced  =Avansert
-monitor.summary.title.groups  =Grupper
 monitor.summary.title.map  =Kart
 monitor.summary.th.advancedSettings  =Avansert innstilling
 label.authoring.authoredMarkers  =Mark\u00f8rer
@@ -105,6 +104,10 @@ button.placeMarker  =Plasser mark\u00f8r
 label.nogroups  =Finner ingen grupper for denne aktiviteten.
 button.submit  =Avslutt
 label.activity.completion  =Aktivitetsslutt
+label.show.on.map  =Vis p\u00e5 kartet
+label.search  =S\u00f8k.....
+monitoring.user.fullname  =Navn
+monitoring.user.reflection  =Notatbok
 
 
-#======= End labels: Exported 99 labels for no NO =====
+#======= End labels: Exported 102 labels for no NO =====
