--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Sep 14 18:55:35 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:12:46 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -210,6 +210,19 @@ label.highest.mark  =H\u00f8yeste karakter
 label.number.learners.in.mark.range  =Antall studenter i karakteromr\u00e5det
 label.number.groups.in.mark.range  =Antall grupper i karakteromr\u00e5det
 label.average.mark  =Gjennomsnitt karakter
+label.error  =Feil
+error.loaderror  =Det oppsto en feil ved opplasting av grid. Hvis problemet fortsetter s\u00e5 kontakt system administratoren.
+label.ok  =OK
+message.monitoring.edit.activity.warning  =MERK: Hvis du editerer eller modifiserer et sp\u00f8rsm\u00e5l eller endrer et svar som studenten allerede har svart p\u00e5, s\u00e5 vil karakteren for det modifiserte sp\u00f8rsm\u00e5let bli slettet fordi det antas at sp\u00f8rsm\u00e5let er endret. Hvis muligheten for  \u00e5 gjenta svaret, s\u00e5 kan studenten send inn et nytt svar.
+label.enable.confidence.levels  =Legg til sikkerhetsniv\u00e5
+label.confidence  =Hvor sikker er du p\u00e5 svaret ditt ?
+label.what.is.your.confidence.level  =Sikkerhet
+label.ira.questions.marks  =iRA sp\u00f8rsm\u00e5l og karakter
+label.attendance  =Deltager
+label.show.students.choices  =Vis studentens valg
+label.hide.students.choices  =Skjul studentens valg
+label.print  =Skriv ut
+label.excel.export  =Eksporter til Excel
 
 
-#======= End labels: Exported 204 labels for no NO =====
+#======= End labels: Exported 217 labels for no NO =====
