--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:18:15 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:04 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -255,6 +255,8 @@ label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03
 label.words.required  =\u039b\u03ad\u03be\u03b5\u03b9\u03c2 \u03c0\u03bf\u03c5 \u03b1\u03c0\u03b1\u03b9\u03c4\u03bf\u03cd\u03bd\u03c4\u03b1\u03b9
 label.other.options  =\u03a0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03c1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
 label.allow.review.other.responses  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b5 \u03c4\u03b7\u03bd \u03b5\u03c0\u03b1\u03bd\u03b5\u03be\u03ad\u03c4\u03b1\u03c3\u03b7 \u03ac\u03bb\u03bb\u03c9\u03bd \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd;
+label.username  =\u038c\u03bd\u03bf\u03bc\u03b1 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
+label.fullname  =\u03a0\u03bb\u03ae\u03c1\u03b5\u03c2 \u03cc\u03bd\u03bf\u03bc\u03b1
 
 
-#======= End labels: Exported 249 labels for el GR =====
+#======= End labels: Exported 251 labels for el GR =====
