--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 28 23:26:18 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:22:54 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -176,6 +176,12 @@ label.rating  =Rating
 label.average.rating  =Average rating {0}/{1} votes
 label.your.rating  =Your rating {0}, average rating {1}/{2} votes
 del.confirmation  =Are you sure you want to delete this resource?
+label.comments  =Comments
+label.enable.comments  =Enable comments
+label.view.comments  =View comments
+label.error  =Error
+error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
+label.ok  =OK
 
 
-#======= End labels: Exported 170 labels for en AU =====
+#======= End labels: Exported 176 labels for en AU =====
