--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 18 12:06:09 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:22:56 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -93,7 +93,6 @@ monitoring.label.hidden  =Escondido
 label.monitoring.edit.activity.cancel  =Cancelar
 label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.edit.activity.edit  =Editar
-message.monitoring.edit.activity.not.editable  =Esta actividad no se puede editar
 export.label.resource  =Recurso
 export.label.no.learning.object  =Paquete offline no disponible
 export.init.resource  =Recursos iniciales
@@ -170,6 +169,19 @@ label.notifications  =Notificaciones
 label.authoring.basic.resource.url.placeholder  =Incluir http:// o https://
 label.authoring.advanced.notify.onfileupload  =Notificar a los instructores cuando un alumno carga un archivo
 event.file.upload  ={0} cargado un archivo \"{1} \"
+label.upload.info  =El archivo no debe ser de formato ejecutable ni exceder  {0}
+error.file.type.zip  =El archivo debe ser de formato zip.
+label.enable.rating  =Habilitar calificaci\u00f3n
+label.rating  =Clasificaci\u00f3n
+label.average.rating  =Calificaci\u00f3n promedio {0}/{1} votos
+label.your.rating  =Su calificaci\u00f3n {0}, calificaci\u00f3n promedio {1}/{2} votos
+del.confirmation  =\u00bfEst\u00e1 seguro que quiere eliminar?
+label.comments  =Comentarios
+label.enable.comments  =Habilitar comentarios
+label.view.comments  =Ver comentarios
+label.error  =Error
+error.loaderror  =Ha ocurrido un error al cargar la informaci\u00f3n. Si este problema persiste, contacte a su administrador.
+label.ok  =OK
 
 
-#======= End labels: Exported 164 labels for es ES =====
+#======= End labels: Exported 176 labels for es ES =====
