--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:19:03 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:55 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -176,6 +176,9 @@ label.rating  =Rangering
 label.average.rating  =Gjennomsnittlig rangering {0}/{1} stemmer
 label.your.rating  =Din rangering {0},gjennomsnittlig rangering {1}/{2}stemmer
 del.confirmation  =Er du sikker p\u00e5 at du vil slette denne ressursen ?
+label.comments  =Kommentarer
+label.enable.comments  =Legg til kommentarer
+label.view.comments  =Se kommentarer
 
 
-#======= End labels: Exported 170 labels for no NO =====
+#======= End labels: Exported 173 labels for no NO =====
