--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = peer_review
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Oct 08 01:09:49 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:11:49 CST 2018 
  
 #=================== labels for Peer Review =================# 
 
@@ -37,7 +37,6 @@ monitoring.summary.note  =Note: number of learners is the number of learners who
 monitoring.label.number.learners  =Number of learners
 monitoring.label.user.name  =Name
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 label.delete  =Delete
 label.edit  =Edit
 label.finished  =Next Activity
@@ -166,36 +165,36 @@ label.manage.users.description  =Uncheck all learners that should not be rated b
 label.removed.user.warning  =The teacher has limited your ability to rate and be rated in this activity.
 label.user.hidden  =Remove user from rating
 label.hide.user.confirmation  =Are you sure you want to stop rating this user? It will lead to removal of all ratings and comments left by him/her.
-
-label.file.downloaded=Spreadsheet downloaded 
-email.SPA=SPA
-email.SPA.factor=SPA Factor
-email.SAPA=SAPA
-email.SAPA.factor=SAPA Factor
-email.self.rating=Self rating
-email.peers.rating=Peers\' rating
-email.explanation.SPA.less.one=SPA < 1.0
-email.explanation.SPA.one=SPA = 1.0
-email.explanation.SPA.greater.one=SPA > 1.0
-email.explanation.SAPA.less.one=SAPA < 1.0
-email.explanation.SAPA.one=SAPA = 1.0
-email.explanation.SAPA.greater.one=SAPA > 1.0
-email.explanation.1=Your performance is below expectation and your self-assessment is too low.
-email.explanation.2=Your performance met expectation but your self-assessment is too low.
-email.explanation.3=Your performance exceeds expectation but your self-assessment is too low.
-email.explanation.4=Your performance is below expectation and your self-assessment is about right.
-email.explanation.5=Your performance met expectation and your self-assessment is about right.
-email.explanation.6=Your performance exceeds expectation and your self-assessment is about right.
-email.explanation.7=Your performance is below expectation and your self-assessment is too high.
-email.explanation.8=Your performance met expectation but your self-assessment is too high.
-email.explanation.9=Your performance exceeds expectation but your self-assessment is too high.
-email.send.automatically=This message was sent automatically, please do not reply to it.
-email.label.feedback=Feedback from group members for {0}:
-email.label.self.rating=Self rating
-email.label.peers.ratng=Peers
-
-label.email.preview=Email Preview
-button.preview.results  =View / Email Results
+label.file.downloaded  =Spreadsheet downloaded
+email.SPA  =SPA
+email.SPA.factor  =SPA Factor
+email.SAPA  =SAPA
+email.SAPA.factor  =SAPA Factor
+email.self.rating  =Self rating
+email.peers.rating  =Peers\' rating
+email.explanation.SPA.less.one  =SPA < 1.0
+email.explanation.SPA.one  =SPA = 1.0
+email.explanation.SPA.greater.one  =SPA > 1.0
+email.explanation.SAPA.less.one  =SAPA < 1.0
+email.explanation.SAPA.one  =SAPA = 1.0
+email.explanation.SAPA.greater.one  =SAPA > 1.0
+email.explanation.1  =Your performance is below expectation and your self-assessment is too low.
+email.explanation.2  =Your performance met expectation but your self-assessment is too low.
+email.explanation.3  =Your performance exceeds expectation but your self-assessment is too low.
+email.explanation.4  =Your performance is below expectation and your self-assessment is about right.
+email.explanation.5  =Your performance met expectation and your self-assessment is about right.
+email.explanation.6  =Your performance exceeds expectation and your self-assessment is about right.
+email.explanation.7  =Your performance is below expectation and your self-assessment is too high.
+email.explanation.8  =Your performance met expectation but your self-assessment is too high.
+email.explanation.9  =Your performance exceeds expectation but your self-assessment is too high.
+email.send.automatically  =This message was sent automatically, please do not reply to it.
+email.label.feedback  =Feedback from group members for {0}:
+email.label.self.rating  =Self rating
+email.label.peers.ratng  =Peers
+label.email.preview  =Email preview
+button.preview.results  =View / email results
 label.hide  =Hide
-label.email.send.failed.preview.wrong=Sending failed - preview cannot be sent. Please create a new preview.
-#======= End labels: Exported 166 labels for en AU =====
+label.email.send.failed.preview.wrong  =Sending failed - preview cannot be sent. Please create a new preview.
+
+
+#======= End labels: Exported 189 labels for en AU =====
