--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:31:34 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:30:12 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -75,7 +75,6 @@ learner.form.filepath.displayname  =Upload file name
 errors.mark.invalid.number  =Mark is invalid number format.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
 button.try.again  =Try again
 button.finish  =Next Activity
 label.submit.file.suffix  =submitted the following files
@@ -157,6 +156,13 @@ label.search  =Search...
 errors.required  ={0} is required.
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 label.add  =Add
+label.waiting.for.leader  =Please, wait while somebody will become a group leader
+label.users.from.group  =Other learners participating in current group:
+label.refresh  =Refresh
+label.waiting.for.leader.finish  =Please wait until a group leader finishes the activity.
+label.select.leader  =Leader selection
+label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until the leader commences it.
+label.use.select.leader.tool.output  =Use leaders from Leader tool
 
 
-#======= End labels: Exported 151 labels for en AU =====
+#======= End labels: Exported 157 labels for en AU =====
