--- a/lams_tool_survey/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:52:29 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:52:30 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -183,6 +183,7 @@ label.survey.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u0388\u
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
 label.summary.downloaded=  =\u0397 \u0388\u03ba\u03b8\u03b5\u03c3\u03b7 \u03bb\u03ae\u03c6\u03b8\u03b7\u03ba\u03b5
+label.timestamp  =\u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1/\u03ce\u03c1\u03b1
 
 
-#======= End labels: Exported 177 labels for el GR =====
+#======= End labels: Exported 178 labels for el GR =====
