--- a/lams_tool_vote/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:30:17 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:50:14 CST 2018 
  
 #=================== labels for Voting =================# 
 
@@ -160,6 +160,7 @@ label.voting.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 js.error.validate.number  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03bc\u03b5 \u03c4\u03bf \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf \u03ae / \u03ba\u03b1\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc \u03c8\u03ae\u03c6\u03c9\u03bd. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5 \u03b5\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c0\u03c1\u03bf\u03c3\u03c0\u03b1\u03b8\u03ae\u03c3\u03c4\u03b5 \u03be\u03b1\u03bd\u03ac.
 label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
+message.monitoring.edit.activity.warning  =\u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7: \u03b5\u03ac\u03bd \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03c4\u03b5\u03af\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c4\u03b5 \u03bc\u03b9\u03b1 \u03c5\u03c0\u03bf\u03c8\u03b7\u03c6\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03c0\u03bf\u03c5 \u03ad\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03b5\u03af, \u03b8\u03b1 \u03b3\u03af\u03bd\u03b5\u03b9 \u03b5\u03c0\u03b1\u03bd\u03b1\u03c4\u03bf\u03c0\u03bf\u03b8\u03ad\u03c4\u03b7\u03c3\u03b7 \u03c3\u03c4\u03bf \u03bc\u03b7\u03b4\u03ad\u03bd - \u03ba\u03b1\u03b8\u03ce\u03c2 \u03ac\u03bb\u03bb\u03b1\u03be\u03b5 \u03b7 \u03c5\u03c0\u03bf\u03c8\u03b7\u03c6\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1.
 
 
-#======= End labels: Exported 154 labels for el GR =====
+#======= End labels: Exported 155 labels for el GR =====
